--- a/WebUI/Views/Characters/Index.cshtml
+++ b/WebUI/Views/Characters/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<WebUI.Models.Character>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Characters";
 }
 
-<h2>Index</h2>
+<h2>@ViewBag.Message</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
